--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "termination_signal"
 version = "0.1.0"
 edition = "2021"
+authors = ["MoghTech"]
+description = "sync and async termination signal listeners"
+repository = "https://github.com/mbecker20/termination_signal"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
